# cc2013

./: .gitignore  .ycm_extra_conf.py  Makefile  a.cpp  a.out  c4  coverage.sh  runner.py
src/: CMakeLists.txt  diagnostic.cc  main.cc  util.h
src/codegen/: cogen.cc  cogen.h  ircreator.cc  ircreator.h  labelgen.cc  labelgen.h  sccp_pass.cc  sccp_pass.h
src/lexer/: CMakeLists.txt  keywordtokentype.cc  keywordtokentype.h  lexer.c  lexer.cc  lexer.h  operatortype.h  punctuatortype.cc  punctuatortype.h  token.cc  token.h
src/parser/: .parser.cc.swp  .parser.h.swp  :w  CMakeLists.txt  ast.cc  ast.h  astNode.h  declaratorNode.h  expressionNode.h  parser.cc  parser.h  parserException.h  pprinter.cc  pprinter.h  semadecl.cc  semadecl.h  semantic.cc  semantic.h  statementNode.h  typeNode.h
src/utils/: CMakeLists.txt  datastructures.h  debug.cc  debug.h  diagnostic.cc  exception.h  pos.h  util.h
tests/backend/: sizeof.c
tests/backend/pass/: arrow.c  call_forward_declared_function.c  goto.c  minus_assignment.c  while.c  (+8 more)
tests/function-definition/: voidName-fail.c
tests/lexer/: c4flags.config
tests/parser/: char.cpp  declaration.c  expressionSimple.c  expressionWithAdressOf.c  expressionWithAssignment.c  expressionWithDot.c  expressionWithFunctionCall.c  expressionWithNegation.c  expressionWithTypeOf2.c  expressionWithTypeOf3.c  expression_torture.c  fail.c  iteratorWithoutExpression.cpp  main.cpp  pointer.cpp  selectionWithExpression.cpp  selectionWithoutExpression.cpp  static_assert.c  struct.c
tests/pretty/: bigraphs1.c  c4flags.config  fac.c  function_function.c
(+370 files in other folders)
